--- a/Overworld.Data.csproj
+++ b/Overworld.Data.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Meep.Tech.ECSBAMF\Meep.Tech.ECSBAM.csproj" />
+    <ProjectReference Include="..\..\..\ECSBAM\Meep.Tech.Data\Meep.Tech.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
