removed build artifacts, moved simple ux to it's own library

--- a/Overworld.Data.csproj
+++ b/Overworld.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\ECSBAM\Meep.Tech.Data\Meep.Tech.Data.csproj" />
+    <ProjectReference Include="..\..\Simple.Ux.Data\Simple.Ux.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
